Added login logic
