# src/main/java/com/example/demo/controller/AuthController.java
@@ -1,0 +1,21 @@
+package com.example.demo.controller;
+
+import com.example.demo.api.auth.AuthApi;
+import com.example.demo.model.auth.LoginRequest;
+import com.example.demo.model.auth.LoginResponse;
+import com.example.demo.repository.AuthService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequiredArgsConstructor
+public class AuthController implements AuthApi {
+
+    private final AuthService authService;
+
+    @Override
+    public ResponseEntity<LoginResponse> login(LoginRequest loginRequest) {
+        return ResponseEntity.ok(authService.login(loginRequest));
+    }
+}
