# src/main/java/com/example/demo/controller/EmployeeController.java
@@ -5,7 +5,9 @@ import com.example.demo.api.EmployeeApi;
 import com.example.demo.model.EmployeeRequest;
 import com.example.demo.model.EmployeeResponse;
 import com.example.demo.service.EmployeeService;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import lombok.AllArgsConstructor;
+import org.example.authaspect.annotation.Authorize;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
@@ -13,11 +15,15 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import java.net.URI;
 import java.util.List;
 
+@SecurityRequirement(name = "Bearer Authentication")
+@Authorize
 @RestController
 @AllArgsConstructor
 public class EmployeeController implements EmployeeApi {
 
     private final EmployeeService employeeService;
+
+    @Authorize(roles={"ADMIN"})
     @Override
     public ResponseEntity<EmployeeResponse> createEmployee(EmployeeRequest employeeRequest) {
         var savedEmployee = employeeService.createEmployee(employeeRequest);
@@ -28,6 +34,7 @@ public class EmployeeController implements EmployeeApi {
         return ResponseEntity.created(location).body(savedEmployee);
     }
 
+    @Authorize(roles={"ADMIN"})
     @Override
     public ResponseEntity<Void> deleteEmployee(String employeeId) {
         employeeService.deleteEmployee(employeeId);
